# ThreadPool

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  ThreadPool.sln  ThreadPool.vcxproj  ThreadPool.vcxproj.filters  main.cpp
Event/: ThreadEvent.cpp  ThreadEvent.h
Google_tests/: CMakeLists.txt
ThreadLogger/: IThreadLogger.cpp  IThreadLogger.h  ThreadLoggerGeneric.cpp  ThreadLoggerGeneric.h
ThreadPool/: ThreadPool.cpp  ThreadPool.h  ThreadPoolTypes.h
ThreadPool/x64/Debug/: ThreadPool.exe.recipe  vc143.idb
ThreadPool/x64/Debug/ThreadPool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ThreadPool.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ThreadWorker/: IThreadWorker.h  ThreadWorkerBase.cpp  ThreadWorkerBase.h
ThreadWorkerTask/: ThreadWorkerTaskBase.cpp  ThreadWorkerTaskBase.h
src/: main.cpp
src/Event/: CMakeLists.txt  Event.cpp  Event.h  Tests.cpp
src/Logger/: CMakeLists.txt  ILogger.cpp  ILogger.h  Tests.cpp
src/Pool/: CMakeLists.txt  TaskPipe.cpp  TaskPipe.h  Tests.cpp  ThreadPool.cpp  ThreadPool.h  ThreadPoolTypes.h
src/Task/: CMakeLists.txt  Task.cpp  Task.h  TaskPipe.cpp  TaskPipe.h  Tests.cpp
src/Worker/: CMakeLists.txt  IThreadWorker.h  Tests.cpp  ThreadWorker.cpp  ThreadWorker.h
